made swagger for users
